[gd_scene load_steps=15 format=3 uid="uid://45is78o0goox"]

[ext_resource type="Script" uid="uid://vwy0rsup753h" path="res://Scripts/Enemies/Bugs/firefly_bug_enemy.gd" id="1_vwywt"]
[ext_resource type="PackedScene" uid="uid://daypi6b0l1qgi" path="res://Scenes/Components/hit_box.tscn" id="2_5fusk"]
[ext_resource type="PackedScene" uid="uid://ddp37pxyayuyc" path="res://Scenes/Components/hurt_box.tscn" id="3_muw1p"]
[ext_resource type="PackedScene" uid="uid://bsi1gw5kk2uiy" path="res://Scenes/Components/health_component.tscn" id="4_vh4h5"]
[ext_resource type="Texture2D" uid="uid://bnhhmax51dvb3" path="res://Assets/Images/SpriteSheets/Animations/enemies/Alien-5.png" id="5_y000i"]
[ext_resource type="Script" uid="uid://cfdggjkh5asx8" path="res://Scripts/ComponentScripts/terrain_detection_component.gd" id="6_75la6"]

[sub_resource type="CircleShape2D" id="CircleShape2D_cejqi"]
radius = 20.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2ouq1"]
size = Vector2(70, 85)

[sub_resource type="AtlasTexture" id="AtlasTexture_7pomn"]
atlas = ExtResource("5_y000i")
region = Rect2(1, 0, 24, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_ci2i8"]
atlas = ExtResource("5_y000i")
region = Rect2(25, 0, 24, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_p00vk"]
atlas = ExtResource("5_y000i")
region = Rect2(49, 0, 24, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_5swms"]
atlas = ExtResource("5_y000i")
region = Rect2(73, 0, 24, 19)

[sub_resource type="SpriteFrames" id="SpriteFrames_qi6nr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7pomn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ci2i8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p00vk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5swms")
}],
"loop": true,
"name": &"default",
"speed": 12.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_1uvci"]
radius = 9.0

[node name="FireflyBugEnemy" type="CharacterBody2D" groups=["enemies"]]
collision_layer = 64
collision_mask = 64
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_vwywt")
SPEED = 150.0
DAMAGE = 100.0
DEATH_SFX = "FlyingBugDeathSFX"
ATTACK_HIT_SFX = "EnemyImpactSFX"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_cejqi")

[node name="HitBox" parent="." instance=ExtResource("2_5fusk")]
position = Vector2(0, 7)
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(0, -7.5)
shape = SubResource("RectangleShape2D_2ouq1")

[node name="HurtBox" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("3_muw1p")]
position = Vector2(0, 7)
collision_layer = 4
collision_mask = 2
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(0, -7.5)
shape = SubResource("RectangleShape2D_2ouq1")

[node name="HealthComponent" parent="." instance=ExtResource("4_vh4h5")]
max_health = 150.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(5, 5)
sprite_frames = SubResource("SpriteFrames_qi6nr")
autoplay = "default"
frame_progress = 0.171913

[node name="DamageNumbersOrigin" type="Marker2D" parent="."]

[node name="TerrainDetectionComponent" type="Area2D" parent="."]
collision_mask = 32
script = ExtResource("6_75la6")
terrain_speed_mods = Array[float]([1.0, 1.0, 1.0, 1.0])

[node name="CollisionShape2D" type="CollisionShape2D" parent="TerrainDetectionComponent"]
shape = SubResource("CircleShape2D_1uvci")

[connection signal="hitbox_triggered" from="HitBox" to="." method="_on_hit_box_hitbox_triggered"]
[connection signal="health_depleted" from="HealthComponent" to="." method="_on_health_component_health_depleted"]
[connection signal="hurt" from="HealthComponent" to="." method="_on_health_component_hurt"]
